# MLFF_torch

./: .gitignore  README.md  active_learning_main_multi.py  build.sh  cu_config_template copy.yaml  cu_config_template.yaml  cu_parameters_dpkf_template.py  cu_parameters_nnkf_template.py  cuo_config_template.yaml  devel-log  git reset --soft HEAD^  git_back_test.txt  parameters.py.template  parameters_template.py  train.py  wuxing_code_change.md
CuO/: parameters.py
cu/: parameters.py
cu1000/: parameters.py
data/: data_loader.py  data_loader_2type.py  fortran_fitting.py  gen_data.py  mlff.py  parameters.py  plot_mlff_inference.py  seper.py  test.py  valid_data.csv
data/fit/: DOC.feat_collect.in  DOC.fit_linearMM.input  calc_VV_TEST.f  calc_VV_force_sub.f  (+9 more)
li10/: parameters.py
src/: FC3.py  build.sh  clean  clean.sh  clean_data.sh  dp_kpu.py  dp_main.py  dp_main_kpu.py  dp_main_kpu_valid.py  dp_train_hvd.py  dp_trainer.py  getFi.py  main.py  mlp_train.py  predict.py  test.py  test1.py  train.py  train1.py  train_2type.py  train_dcn.py  train_demo.py  train_hvd.py  train_kalman.py  train_refactor.py  train_sample.py  trainer.py
src/inference/: CMakeLists.txt  Sample.cpp
src/inference/cmake/: FindCudnn.cmake
src/inference/common/: EntropyCalibrator.h  argsParser.h  common.h  getOptions.cpp  getOptions.h  sampleDevice.h  sampleEngines.cpp  sampleEngines.h  sampleInference.cpp  sampleInference.h  sampleOptions.cpp  sampleOptions.h  sampleUtils.h
utils/: clean_data.sh  plot_mlff_inference.py  plot_nn_test.py  read_torch_wij.py
zwt/: parameters.py
(+300 files in other folders)
